@@ -1,110 +1,3 @@
 <project name="RiskAnalyticsCore" default="cruise">
-
-    <property environment="env"/>
-    <property name="GRAILS_HOME" value="${env.GRAILS_HOME}"/>
-    <import file="${GRAILS_HOME}/src/grails/grails-macros.xml"/>
-
-    <property file="application.properties"/>
-
-    <property name="dist.dir" value="dist"/>
-    <property name="target.dir" value="target"/>
-    <property name="doc.dir" value="docs/gapi"/>
-
-    <condition property="grails" value="${GRAILS_HOME}/bin/grails.bat">
-        <os family="windows"/>
-    </condition>
-    <property name="grails" value="${GRAILS_HOME}/bin/grails"/>
-
-    <condition property="GRAILS_JVM_OPTS" value="${env.GRAILS_JVM_OPTS}">
-      <isset property="env.GRAILS_JVM_OPTS" />
-    </condition>
-    <property name="GRAILS_JVM_OPTS" value="-Xmx1024m -XX:MaxPermSize=512m -Duser.language='en'"/>
-
-    <tstamp>
-        <format property="build-timestamp" pattern="dd.MM.yyyy HH:mm"/>
-    </tstamp>
-
-    <target name="init">
-        <echo message="GRAILS_HOME: ${GRAILS_HOME}"/>
-        <echo message="app.name: ${app.name}"/>
-        <echo message="user.language: ${user.language}, user.country: ${user.country}"/>
-    </target>
-
-    <target name="cruise" depends="clean,compile,test"
-            description="to be started by the CruiseControl build server"/>
-
-
-    <target name="clean" depends="init" description="--> Cleans a Grails application">
-        <delete dir="${dist.dir}"/>
-
-        <mkdir dir="${dist.dir}"/>
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="clean"/>
-            <arg value="--non-interactive"/>
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-            <env key="JAVA_OPTS" value="${GRAILS_JVM_OPTS}"/>
-        </exec>
-        <delete verbose="true">
-            <fileset dir="." includes="*Db.script"/>
-            <fileset dir="." includes="**Db.properties"/>
-            <fileset dir="." includes="*.tsl"/>
-            <fileset dir="." includes="*.log"/>
-        </delete>
-    </target>
-
-
-    <target name="compile" depends="init" description="--> Compiles a Grails application">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="compile"/>
-            <arg value="--non-interactive"/>
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-            <env key="JAVA_OPTS" value="${GRAILS_JVM_OPTS}"/>
-        </exec>
-    </target>
-
-
-    <target name="stats" depends="init" description="--> grails stats">
-        <grails command="stats"/>
-    </target>
-
-
-    <target name="test" depends="init" description="--> Run a Grails applications unit tests">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="test-app"/>
-            <!--<arg value="-coverage"/>-->
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-            <!-- I am pretty sure the -Dtools.jar option below can go (who is using jre5 anymore anyway?) but did not dare remove it -->
-            <env key="JAVA_OPTS" value="${GRAILS_JVM_OPTS} -Djava.awt.headless=false -Dtools.jar=../jre1.5.0_11/lib/tools.jar "/>
-        </exec>
-        <copy todir="${dist.dir}">
-            <fileset dir="target" includes="test-reports/"/>
-        </copy>
-    </target>
-
-    <target name="release-plugin" depends="clean, compile" description="Releases the plugin in our P1 plugin repository.">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="deploy-plugin"/>
-            <arg value="--repository=pillarone"/>
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-        </exec>
-    </target>
-
-    <target name="doc" depends="init" description=" combined groovy and javadoc">
-        <grails command="doc"/>
-        <copy todir="${doc.dir}">
-            <fileset dir="${doc.dir}/src/java"/>
-        </copy>
-        <copy todir="${doc.dir}">
-            <fileset dir="${doc.dir}/src/groovy"/>
-        </copy>
-    </target>
-
-    <target name="standalone-compile" depends="init" description="--> Run a Grails applications unit tests">
-        <exec executable="${grails}" failonerror="true" resolveexecutable="true">
-            <arg value="jar -destination=out/production/RiskAnalyticsCore"/>
-            <env key="GRAILS_HOME" value="${GRAILS_HOME}"/>
-            <env key="JAVA_OPTS" value="${GRAILS_JVM_OPTS}"/>
-        </exec>
-    </target>
-
+    <import file="scripts/build.xml"/>
 </project>
